spec/fixtures/valid_rails_app/config/routes.rb
Valid::Application.routes.draw do
end
