spec/fixtures/invalid_rails_app/config/routes.rb
Invalid::Application.routes.draw do

  root 'application#welcome'

end
